[project]
name = "agentopy"
description = "Lightweight, modular, extensible framework for building agents and environments."
version = "0.1.0"
authors = [
    { name = "Vahe Yepremyan" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

readme = "README.md"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]